# mentorship

./: README.md  calculators.py  constants.py  index.html  main.py  pyproject.toml  some_text.txt
.circleci/: config.yml
.github/workflows/: config.yml
1/export/: influxDbData.txt
10/export/: influxDbData.txt
11/export/: influxDbData.txt
12/export/: influxDbData.txt
13/export/: influxDbData.txt
14/export/: influxDbData.txt
15/export/: influxDbData.txt
16/export/: influxDbData.txt
17/export/: influxDbData.txt
18/export/: influxDbData.txt
19/export/: influxDbData.txt
2/export/: influxDbData.txt
20/export/: influxDbData.txt
3/export/: influxDbData.txt
4/export/: influxDbData.txt
5/export/: influxDbData.txt
6/export/: influxDbData.txt
7/export/: influxDbData.txt
8/export/: influxDbData.txt
9/export/: influxDbData.txt
application/: __init__.py  run.py  setup.py
application/server/: controllers.py  models.py
application/server/services/: calculators.py  separator.py  statistic_containers.py  text_analyzer.py
test/application/: data_sets.py
test/application/server/services/: calculatots_test.py  separator_test.py
