[tool.poetry]
name = "mentorship"
version = "0.1.0"
description = ""
authors = ["<kulchytskiyyura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
flask-mongoengine = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

